--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^1.5.0",
     "@nuxt/ui": "^2.15.1",
     "nuxt": "^3.11.2",
+    "nuxt-og-image": "^3.0.0-rc.52",
     "valibot": "^0.30.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
